# mcp-server-hosting

./: .gitignore  README.md
python/: Dockerfile  README.md  pyproject.toml
python/app/: main.py
python/app/powerpoint/: __init__.py  client.py  tools.py
python/app/weather/: __init__.py  client.py  tools.py
